tests/mm0_mmu/fail/bad-sort1342.mm0
-- bad modifier order
pure provable free strict sort s1342;